CM-1238: Fix overwrapping input text and clear button

--- a/src/admin/src/components/composite/advisoryForm/AdvisoryForm.css
+++ b/src/admin/src/components/composite/advisoryForm/AdvisoryForm.css
@@ -147,6 +147,7 @@
 .clear-url-btn {
   position: absolute !important;
   right: 8px;
+  background-color: white !important;
 }
 
 .clear-url-btn:hover, .clear-url-btn:active {
